--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ h6 {
     display: flex;
 }
 
-.form-control {
+#edit-todo-form > .form-control {
     display: flex;
     flex-direction: column;
 }
