add ability to filter by project

--- a/src/style.css
+++ b/src/style.css
@@ -48,11 +48,12 @@ h6 {
 /* Custom CSS*/
 #container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     font-family: "Roboto", sans-serif;
 }
 
-#create-todo-form {
+#create-todo-form, 
+#filter-todos-form {
     display: flex;
 }
 
