fix bug where edit form button effected every todo

--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ button {
     display: none;
 }
 
-#edit-todo-form {
+.edit-todo-form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0.5rem;
